# lancelot

./: Rakefile  lancelot.gemspec
.github/workflows/: ci.yml  release.yml
ext/lancelot/: Cargo.toml
ext/lancelot/src/: conversion.rs  dataset.rs  lib.rs  schema.rs
lib/: lancelot.rb
lib/lancelot/: version.rb
spec/lancelot/: dataset_spec.rb
