[package]
name = "lancelot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
lance = { version = "0.31", default-features = false }
lance-index = "0.31"
lance-linalg = "0.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow = "55"
arrow-array = "55"
arrow-schema = "55"
arrow-data = "55"
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata]
# Minimum supported Rust version
rust-version = "1.86.0"

[dev-dependencies]