[package]
name = "lancelot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
lance = { version = "3.0", default-features = false }
lance-index = "3.0"
lance-linalg = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
arrow-data = "57"
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata]
# Minimum supported Rust version
rust-version = "1.86.0"

[dev-dependencies]